# shmtu-terminal

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
Documents/: .gitignore  README.md  data-model.md  package.json
Documents/.github/workflows/: docs-pages.yml
Documents/dev/: 2026-05-25-daily-average-calculation.md  2026-05-29-docker-bundled-image.md  2026-05-29-multi-server-monitor.md
Documents/docs/: android-architecture.md  android-bill-flow.md  android-integration.md  android-settings.md  classifier.md  feature-spec.md  getting-started.md  index.md  ocr-model-versions.md  overview.md  parser.md  statistics-design.md  toml-format.md
Documents/docs/.vitepress/: config.ts
Documents/docs/dev/: index.md
LLMs/: Init.md  OCRServer.md  database.md
database/: .gitignore  README.md
database/bill/: position.toml  rules.toml  schedule.toml  type.toml
docs/: ui-design.md
scripts/: download_github_release.py  install_python_package.sh  update_submodules.py  upgrade_npm_deps.py
src/shmtu_terminal/: __init__.py  cli.py  core.py
src/shmtu_terminal/_internal/: __init__.py
src/shmtu_terminal/adapters/: __init__.py
